# --------------------------------------------------------------------------------------
# Copyright (c) 2013-2023, Nucleic Development Team.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# --------------------------------------------------------------------------------------

[project]
name = "enaml"
description = "Declarative DSL for building rich user interfaces in Python"
readme = "README.rst"
requires-python = ">=3.8,!=3.11.0,!=3.11.1"
license = {file = "LICENSE"}
authors = [
  {name = "The Nucleic Development Team", email = "sccolbert@gmail.com"}
]
maintainers = [
  {name = "Matthieu C. Dartiailh", email = "m.dartiailh@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "ply",
    "atom>=0.9.0",
    "kiwisolver>=1.2.0",
    "bytecode>=0.13.0",
    "pegen>=0.1.0",
]
dynamic=["version"]

[project.optional-dependencies]
qt5-pyqt = ["qtpy>=2.1.0", "PyQt5"]
qt5-pyside = ["qtpy>=2.1.0", "pyside2"]
qt6-pyqt = ["qtpy>=2.1.0", "PyQt6>=6.3.1"]
qt6-pyside = ["qtpy>=2.3.0", "pyside6>=6.2.3"]
scintilla-qt5-pyqt = ["QScintilla"]
scintilla-qt6-pyqt = ["PyQt6-QScintilla"]
matplotlib-qt = ["matplotlib"]
ipython-qt = ["qtconsole"]
webview-qt5-pyqt = ["PyQtWebEngine"]
webview-qt6-pyqt = ["PyQt6-WebEngine"]
vtk-qt = ["vtk"]

[project.urls]
homepage = "https://github.com/nucleic/enaml"
documentation = "https://enaml.readthedocs.io/en/latest/"
repository = "https://github.com/nucleic/enaml"
changelog = "https://github.com/nucleic/enaml/blob/main/releasenotes.rst"

[project.scripts]
enaml-run = "enaml.runner:main"
enaml-compileall = "enaml.compile_all:main"

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3", "cppy>=1.2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"enaml.core.parser" = ['*.gram']
"enaml.applib" = ['*.enaml']
"enaml.stdlib" = ['*.enaml']
"enaml.workbench.core" = ['*.enaml']
"enaml.workbench.ui" = ['*.enaml']
"enaml.qt.docking" = [
    'dock_images/*.png',
    'dock_images/*.py',
    'enaml_dock_resources.qrc'
]

[tool.setuptools_scm]
write_to = "enaml/version.py"
write_to_template = """
# --------------------------------------------------------------------------------------
# Copyright (c) 2013-2023, Nucleic Development Team.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# --------------------------------------------------------------------------------------
# This file is auto-generated by setuptools-scm do NOT edit it.

from collections import namedtuple

#: A namedtuple of the version info for the current release.
_version_info = namedtuple("_version_info", "major minor micro status")

parts = "{version}".split(".", 3)
version_info = _version_info(
    int(parts[0]),
    int(parts[1]),
    int(parts[2]),
    parts[3] if len(parts) == 4 else "",
)

# Remove everything but the 'version_info' from this module.
del namedtuple, _version_info, parts

__version__ = "{version}"
"""
